--- a/clase2_proyecto/package.json
+++ b/clase2_proyecto/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^3.4.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
